recuperación de sistema

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,7 +11,7 @@
 
 <h1>Skills</h1>
 <br>
-<h2>Lenguajes de programación:<h2>
+<h2 class="sub">Lenguajes de programación:<h2>
 <br>
 <% @skills.each do |lenguaje| %>
   <h2><%= lenguaje.title %><h2>
