Created seeds file for sample data

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,6 +15,6 @@
 <br>
 <% @skills.each do |lenguaje| %>
   <h2><%= lenguaje.title %><h2>
-  <h3>Tiempo empleado <%= lenguaje.percent_utilized %>%</h3>
+  <h3>Tiempo empleado: <%= lenguaje.percent_utilized %>%</h3>
   <br>
 <% end %>
