Integrated new and create actions for portfolios

--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -4,7 +4,7 @@
   <h4><%= portfolio.title %></h4>
   <p><%= portfolio.subtitle%></p>
   <p><%= portfolio.body%></p>
-  <%= image_tag portfolio.thumb_image %>
+  <%= image_tag portfolio.thumb_image unless portfolio.thumb_image.nil?%>
   <hr />
 <% end %>
   
