--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,9 +1,9 @@
 <h1>Portfolio Items</h1>
 <hr>
-<% @portfolio_items.each do |portfolio| %>
+<% @portfolio_item.each do |portfolio| %>
   <h2><%= portfolio.title %></h2>
   <h3><%= portfolio.subtitle %></h3>
   <p><%= portfolio.body %></p>
-  <%= image_tag portfolio.thumb_image %>
+  <%= image_tag portfolio.thumb_image unless portfolio.thumb_image.nil? %>
 <hr>
 <% end %>
