--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,9 +1,13 @@
 <h1>Portfolio Items</h1>
+
+<%= link_to "Crear nuevo artículo del Portfolio", new_portfolio_url %>
+
 <hr>
-<% @portfolio_item.each do |portfolio| %>
+<% @portfolio_item.sort.each do |portfolio| %>
   <h2><%= portfolio.title %></h2>
   <h3><%= portfolio.subtitle %></h3>
   <p><%= portfolio.body %></p>
   <%= image_tag portfolio.thumb_image unless portfolio.thumb_image.nil? %>
+  <p><%= link_to "Editar Portfolio", edit_portfolio_path(portfolio.id) %></p>
 <hr>
 <% end %>
