--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -4,7 +4,7 @@
 
 <hr>
 <% @portfolio_item.sort.each do |portfolio| %>
-  <h2><%= link_to portfolio.title, portfolio_path(portfolio) %></h2>  
+  <h2><%= link_to portfolio.title, portfolio_show_path(portfolio) %></h2>  
   <em><%= portfolio.subtitle %></em>
   <p><%= portfolio.body %></p>
   <%= image_tag portfolio.thumb_image unless portfolio.thumb_image.nil? %>
