--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -7,7 +7,7 @@
     <tr>
       <th>Título</th>
       <th>Artículo</th>
-      <th colspan="3"></th>
+      <th colspan="4"></th>
     </tr>
   </thead>
 <% @blogs.sort.each do |blog| %>
@@ -15,6 +15,7 @@
       <tr>
         <td><%= blog.title %></td>
         <td><%= blog.body %></td>
+        <td><%= link_to blog.status, toggle_status_blog_path(blog) %></td>        
         <td><%= link_to 'Mostrar', blog %></td>
         <td><%= link_to 'Editar', edit_blog_path(blog) %></td>
         <td><%= link_to 'Eliminar', blog, method: :delete, data: { confirm: '¿Seguro que quieres eliminar el post?' } %></td>
