--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,5 +21,9 @@
     <% end %>
 
     <%= yield %>
+
+    <% if session[:source] %>
+      <p>Gracias por visitarme desde <%= session[:source] %></p>
+    <% end %>
   </body>
 </html>
