--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,5 @@
-<h1>Hola <%= current_user.first_name if current_user %></h1>
+<h1>Hola <%= current_user.first_name %></h1>
+
 <h2>Artículos del blog:</h2>
 <br>
 <% @posts.each do |articulo| %>
@@ -6,7 +7,6 @@
   <h4><%= articulo.body %></h4>
   <br>
 <% end %>
-
 
 <hr />
 
