--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -23,14 +23,7 @@
 
     <%= yield %>
 
-    <div class="cabecera">
-      <div><%= link_to "Home", root_path %></div>
-      <div><%= link_to "About", about_path %></div>
-      <div><%= link_to "Contact", contact_path %></div>
-      <div><%= link_to "Blog", blogs_path %></div>
-      <div><%= link_to "Portfolio", portfolios_path %></div>
-    </div>
-
+    <%= render "shared/nav" %>
 
     <% if session[:source] %>
       <p>Gracias por visitarme desde <%= session[:source] %></p>
