--- a/app/views/portfolios/edit.html.erb
+++ b/app/views/portfolios/edit.html.erb
@@ -1,22 +1,3 @@
 <h1>Editar este objeto del Portfolio</h1>
 
-<%= form_for(@portfolio_item) do |form| %>
-  <div class="field">
-    <%= form.label :título %>
-    <%= form.text_field :title %>
-  </div>
-
-  <div class="field">
-    <%= form.label :subtítulo %>
-    <%= form.text_field :subtitle %>
-  </div>
-
-  <div class="field">
-    <%= form.label :artículo %>
-    <%= form.text_area :body %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit "Modificar Portfolio"%>
-  </div>
-<% end %>
+<%= render 'form', portfolio_item: @portfolio_item %>
