--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -1,39 +1,3 @@
 <h1>Crear un nuevo objeto del Portfolio</h1>
 
-<%= form_for(@portfolio_item) do |form| %>
- <ul>
-  <li>
-  <div class="field">
-    <%= form.label :título %>
-    <%= form.text_field :title %>
-  </div>
-  <br>
-  </li>
-  <li>
-  <div class="field">
-    <%= form.label :subtítulo %>
-    <%= form.text_field :subtitle %>
-  </div>
-  <br>
-  </li>
-  <li>
-  <div class="field">
-    <%= form.label :artículo %>
-    <%= form.text_area :body %>
-  </div>
-  <br>
-  </li>
- 
-    <%= form.fields_for :technologies do |technology_form| %>
-      <li>
-        <%= technology_form.label :name %>
-        <%= technology_form.text_field :name %>
-      </li>
-      <br>
-    <% end %>
-  </ul>
-
-  <div class="actions">
-    <%= form.submit "Publicar Portfolio"%>
-  </div>
-<% end %>
+<%= render 'form', portfolio_item: @portfolio_item %>
