Implemented content tag helper methods

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,9 +19,8 @@
     <%= login_helper %>
 
     <%= yield %>
+    
+    <%= source_helper("application") %>
 
-    <% if session[:source] %>
-      <p>Gracias por visitarme desde <%= session[:source] %></p>
-    <% end %>
   </body>
 </html>
