--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -20,8 +20,7 @@
 
     <%= yield %>
 
-    <% if session[:source] %>
-      <p>Gracias por visitarme desde <%= session[:source] %></p>
-    <% end %>
+    <%= source_helper("application") %>
+
   </body>
 </html>
