--- a/app/views/portfolios/edit.html.erb
+++ b/app/views/portfolios/edit.html.erb
@@ -1,3 +1,3 @@
 <h1>Editar este objeto del Portfolio</h1>
 
-<%= render 'form', portfolio_item: @portfolio_item %>
+<%= render 'form', portfolio_item: @portfolio_items %>
