--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -1,3 +1,3 @@
 <h1>Crear un nuevo objeto del Portfolio</h1>
 
-<%= render 'form', portfolio_item: @portfolio_item %>
+<%= render 'form', portfolio_item: @portfolio_items %>
