--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -18,4 +18,4 @@
 
 <br>
 
-<%= link_to 'Nuevo artículo', new_blog_path %>
+<%= link_to 'Nuevo artículo', new_blog_path if logged_in?(:site_admin)%>
