--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -10,5 +10,5 @@
   <%= @blog.body %>
 </p>
 
-<%= link_to 'Editar', edit_blog_path(@blog) %> |
+<%= link_to 'Editar', edit_blog_path(@blog) if logged_in?(:site_admin)%> |
 <%= link_to 'Volver', blogs_path %>
