--- a/app/views/portfolios/_portfolio_item.html.erb
+++ b/app/views/portfolios/_portfolio_item.html.erb
@@ -6,8 +6,8 @@
 
 <%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %>
 
-<p><%= link_to "Editar Portfolio", edit_portfolio_path(portfolio_item) %></p>
+<p><%= link_to "Editar Portfolio", edit_portfolio_path(portfolio_item)  if logged_in?(:site_admin) %></p>
 
-<p><%= link_to 'Eliminar', portfolio_path(portfolio_item), method: :delete, data: { confirm: '¿Seguro que quieres eliminar el artículo del portfolio?' } %></p>
+<p><%= link_to 'Eliminar', portfolio_path(portfolio_item), method: :delete, data: { confirm: '¿Seguro que quieres eliminar el artículo del portfolio?' } if logged_in?(:site_admin) %></p>
 
 <hr>
