--- a/app/views/portfolios/angular.html.erb
+++ b/app/views/portfolios/angular.html.erb
@@ -1,6 +1,6 @@
 <h1>Angular Portfolio Items</h1>
 
-<%= link_to "Crear nuevo artículo del Portfolio", new_portfolio_url %>
+<%= link_to "Crear nuevo artículo del Portfolio", new_portfolio_url if logged_in?(:site_admin) %>
 
 <hr>
 <% @angular_portfolio_items.sort.each do |portfolio| %>
@@ -8,7 +8,7 @@
   <em><%= portfolio.subtitle %></em>
   <p><%= portfolio.body %></p>
   <%= image_tag portfolio.thumb_image unless portfolio.thumb_image.nil? %>
-  <p><%= link_to "Editar Portfolio", edit_portfolio_path(portfolio) %></p>
-  <p><%= link_to 'Eliminar', portfolio_path(portfolio), method: :delete, data: { confirm: '¿Seguro que quieres eliminar el artículo del portfolio?' } %></p>
+  <p><%= link_to "Editar Portfolio", edit_portfolio_path(portfolio) if logged_in?(:site_admin) %></p>
+  <p><%= link_to 'Eliminar', portfolio_path(portfolio), method: :delete, data: { confirm: '¿Seguro que quieres eliminar el artículo del portfolio?' } if logged_in?(:site_admin) %></p>
   <hr>
 <% end %>
