--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Portfolio Items</h1>
 
-<%= link_to "Crear nuevo artículo del Portfolio", new_portfolio_url %>
+<%= link_to "Crear nuevo artículo del Portfolio", new_portfolio_url if logged_in?(:site_admin) %>
 
 <hr>
 <%= render partial: 'portfolio_item', collection: @portfolio_items %>
