--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,16 +13,22 @@
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
 
-    <%= render "shared/nav", location: 'top' %>
+    <div class="site-wrapper">
+      <div class="site-wrapper-inner">
+        <div class="cover-container">
 
-    <%= login_helper %>
+          <%= render "shared/application_nav" %>
 
-    <%= yield %>
-    
-    <%= copyrigth_generator %>
+          <%= login_helper %>
+
+          <%= yield %>
+          
+          <%= copyrigth_generator %>
+
+        </div>
+      </div>
+    </div>
 
   </body>
 </html>
