Updated master layout styles along with helper methods

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,12 +20,10 @@
 
           <%= render "shared/application_nav" %>
 
-          <%= login_helper %>
-
           <%= yield %>
-          
-          <%= copyrigth_generator %>
 
+          <%= render "shared/application_footer" %>
+          
         </div>
       </div>
     </div>
