--- a/app/views/shared/_application_nav.html.erb
+++ b/app/views/shared/_application_nav.html.erb
@@ -1,12 +1,15 @@
 <div class="masthead clearfix">
   <div class="inner">
-    <h3 class="masthead-brand">www.jcctek.com</h3>
+<h3 class="masthead-brand">www.jcctek.com</h3>
+  <!-- <h3><%= link_to "www.jcctek.com", "http://www.jcctek.com", class: 'masthead-brand' %></h3> -->
     <nav class="nav nav-masthead">
       <%= link_to "Home", root_path, class: 'nav-link active' %>
       <%= link_to "About", about_path, class: 'nav-link' %>
       <%= link_to "Contact", contact_path, class: 'nav-link' %>
       <%= link_to "Blog", blogs_path, class: 'nav-link' %>
       <%= link_to "Portfolio", portfolios_path, class: 'nav-link' %>
+
+      <%= login_helper 'nav-link' %>
     </nav>
   </div>
 </div>
