updated styles and added content to about_me page and added content and a map for contact page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,3 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<h1>Sobre mi</h1>
+<p>Aunque sin abandonar nunca el tema de la programación ni el mundo de la informática, los caminos laborales me ha llevado por otros caminos distintos alejádome de este mundo a nivel laboral.</p>
+<p>Sin embargo durante lós últimos meses he decidido entrar en el mundo laboral dél desarrollo de aplicaciones web y para esto y de una forma autodidacta he realizado varios cursos de desarrollo web a través de distintas plataformas de aprendizaje online...</p>
