--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="inner cover">
-  <h1 class="cover-heading">Cover your page.</h1>
-  <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+  <h1 class="cover-heading">¡ Hola !</h1>
+  <p class="lead">En estas páginas encontrarás diversos proyectos en los que he trabajado en mi aprendizaje de desarrollo de aplicaciones web, desde páginas básicas en html hasta proyectos más grandes como este mismo que estás viendo realizado en Ruby on Rails.</p>
   <p class="lead">
    <%= link_to "Más sobre mi", about_me_path, class: "btn btn-lg btn-secondary" %>
   </p>
