--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,1 +1,25 @@
-<h1>Pages#contact</h1>
+<h1>Ponte en contacto...</h1>
+
+<hr>
+
+<div class="row">
+  
+  <div class="col-md-6">
+  
+    <h3>Dirección</h3>
+    <p>Carretera de Pozuelo 5,</p>
+    <p> 28220, Majadahonda, Madrid</p>
+
+    <h3>Teléfono</h3>
+    <p>622 367 109</p>
+
+    <h3>Correo electrónico</h3>
+    <p><a href="mailto:jccalzadag@gmail.com?subject=Portfolio" "Email">jccalzadg@gmail.com</a></p>
+  
+  </div>
+
+  <div class="col-md-6">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d200022.78735433452!2d-3.897653050078244!3d40.44465366774113!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd4184f4f28c4c4b%3A0xe9746ff4ed94c600!2sCarr.+de+Pozuelo%2C+5%2C+28220+Majadahonda%2C+Madrid!5e0!3m2!1ses!2ses!4v1496507905653" width="350" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+  </div>
+
+</div>
