--- a/app/views/shared/_application_nav.html.erb
+++ b/app/views/shared/_application_nav.html.erb
@@ -1,11 +1,12 @@
 <div class="masthead clearfix">
   <div class="inner">
-<h3 class="masthead-brand">www.jcctek.com</h3>
+<h4 class="masthead-brand">www.jcctek.com </h4>
   <!-- <h3><%= link_to "www.jcctek.com", "http://www.jcctek.com", class: 'masthead-brand' %></h3> -->
     <nav class="nav nav-masthead">
-      <%= link_to "Home", root_path, class: 'nav-link active' %>
-      <%= link_to "About", about_path, class: 'nav-link' %>
-      <%= link_to "Contact", contact_path, class: 'nav-link' %>
+      <p class="nav-link">|&nbsp;</p>
+      <%= link_to "Inicio", root_path, class: 'nav-link' %>
+      <%= link_to "Sobre mi", about_path, class: 'nav-link' %>
+      <%= link_to "Contacto", contact_path, class: 'nav-link' %>
       <%= link_to "Blog", blogs_path, class: 'nav-link' %>
       <%= link_to "Portfolio", portfolios_path, class: 'nav-link' %>
       <p class="nav-link">&nbsp;|&nbsp;</p>
