--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="card-block">
     <div class="row">
       <div class="col-md-8">
-        <h2>Modificar Usuario</h2>
+        <h2 class="centro">Modificar Usuario</h2>
     
           <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
             <%= devise_error_messages! %>
@@ -47,14 +47,10 @@
       </div>
 
       <div class="col-md-4">
-        <h3>Cancelar mi cuenta</h3>
+        <h3 class="centro">Cancelar mi cuenta</h3>
 
-        <p> ¿no te ha gustado?<%= button_to "Cancelar mi cuenta", registration_path(resource_name), data: { confirm: "¿Estás seguro/a?" }, method: :delete, class: 'btn btn-lg btn-outline-danger btn-block' %></p>
+        <p class="centro"> ¿no te ha gustado?<%= button_to "Cancelar mi cuenta", registration_path(resource_name), data: { confirm: "¿Estás seguro/a?" }, method: :delete, class: 'btn btn-lg btn-outline-danger btn-block' %></p>
       </div>
-    </div>
-    <hr>
-    <div class="auth-links">
-      <%= button_to "Volver", :back, class: "btn btn-outline-secondary btn-lg btn-block"%>
     </div>
   </div>
 </div>
