--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -2,21 +2,53 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <title><%= @page_title %></title>
     <%= csrf_meta_tags %>
     <meta name="keywords" content="<%= @seo_keywords %>" >
+
     <%= stylesheet_link_tag    'blogs', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+
+    <%= render 'shared/blog_nav' %>
+
+    <!-- Inicio de la cabecera del blog --> 
+    <div class="blog-header">
+      <div class="container">
+        <h1 class="blog-title">The Bootstrap Blog</h1>
+        <p class="lead blog-description">An example blog template built with Bootstrap.</p>
+      </div>
+    </div>
+    <!-- fin de la cabecera del blog --> 
+
+    <!-- Inicio del contenedor -->
+
+    <div class="container"> 
+      <div class="row">
+      
+
+      </div>
+    </div>
+
+    <!-- fin del contenedor -->
+
 
     <%= login_helper %>
     
     <%= yield %>
+
+    <!-- Inicio de la barra lateral -->
+
+    <!-- Fin de la barra lateral -->  
+
+    <!-- Inicio pie de página -->
+
+    <!-- Fin pie de página -->
 
     <%= render "shared/nav", location: 'bottom' %>
 
