Integrated styles for blog pages

--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -1,6 +1,10 @@
+<div class="col-sm-8 blog-main">
+
 <h1>Editing Blog</h1>
 
 <%= render 'form', blog: @blog %>
 
 <%= link_to 'Mostrar', @blog %> |
 <%= link_to 'Volver', blogs_path %>
+
+</div>
