--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -1,9 +1,19 @@
-<tr>
-  <td><%= blog.title %></td>
-  <td><%= distance_of_time_in_words(blog.created_at, Time.now) %></td>
-  <td><%= blog.body %></td>
-  <td><%= link_to blog.status, toggle_status_blog_path(blog) %></td>        
-  <td><%= link_to 'Mostrar', blog %></td>
-  <td><%= link_to 'Editar', edit_blog_path(blog) if logged_in?(:site_admin) %></td>
-  <td><%= link_to 'Eliminar', blog, method: :delete, data: { confirm: '¿Seguro que quieres eliminar el post?' } if logged_in?(:site_admin)%></td>
-</tr> 
+<div class="blog-post">
+  
+  <h2 class="blog-post-title"><%= link_to blog.title, blog %></h2>
+  
+  <p class="blog-post-meta">Published <%= distance_of_time_in_words(blog.created_at, Time.now) %> ago.</p>
+  
+  <% if logged_in?(:site_admin) %>
+    <p class="blog-post-meta">
+      <%= link_to blog.status, toggle_status_blog_path(blog)%> /
+ 
+      <%= link_to 'Editar', edit_blog_path(blog) %> /
+  
+      <%= link_to 'Eliminar', blog, method: :delete, data: { confirm: '¿Seguro que quieres eliminar el post?' } %>
+    </p>
+  <% end %>
+
+  <p><%= blog.body %></p>
+
+</div>            
