--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -11,19 +11,19 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :título %>
-    <%= form.text_field :title, id: :blog_title %>
+    <%= form.text_field :title, id: :blog_title, class: 'form-control' %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :artículo %>
-    <%= form.text_area :body, id: :blog_body %>
+    <%= form.text_area :body, id: :blog_body, class: 'form-control', rows: 20 %>
   </div>
 
 
 
-  <div class="actions">
-    <%= form.submit "Publicar artículo"%>
+  <div class="form-group">
+    <%= form.submit "Publicar artículo", class: "btn btn-outline-primary btn-lg btn-block" %>
   </div>
 <% end %>
