--- a/app/views/blogs/new.html.erb
+++ b/app/views/blogs/new.html.erb
@@ -1,5 +1,10 @@
-<h1>Nuevo artículo</h1>
+<div class="col-sm-8 blog-main">
 
-<%= render 'form', blog: @blog %>
 
-<%= link_to 'Volver', blogs_path %>
+  <h1>Nuevo artículo</h1>
+
+  <%= render 'form', blog: @blog %>
+
+  <%= link_to 'Volver', blogs_path %>
+
+</div>
