--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -20,8 +20,9 @@
     <!-- Inicio de la cabecera del blog --> 
     <div class="blog-header">
       <div class="container">
-        <h1 class="blog-title">The Bootstrap Blog</h1>
+        <h1 class="blog-title">Mi Blog</h1>
         <p class="lead blog-description">An example blog template built with Bootstrap.</p>
+        <%= link_to 'Escribir nuevo artículo del blog', new_blog_path if logged_in?(:site_admin)%>
       </div>
     </div>
     <!-- fin de la cabecera del blog --> 
@@ -30,29 +31,27 @@
 
     <div class="container"> 
       <div class="row">
-      
 
-      </div>
-    </div>
 
     <!-- fin del contenedor -->
 
-
-    <%= login_helper %>
     
     <%= yield %>
 
-    <!-- Inicio de la barra lateral -->
+    <%= render 'shared/blog_sidebar' %>
 
-    <!-- Fin de la barra lateral -->  
-
+    </div>
     <!-- Inicio pie de página -->
-
+    <footer class="blog-footer">
+      <p>Blog template built for <a href="https://getbootstrap.com">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+      <p>
+        <a href="#">Back to top</a>
+      </p>
+      <%= copyrigth_generator %>
+    </footer>
     <!-- Fin pie de página -->
+    </div>
 
-    <%= render "shared/nav", location: 'bottom' %>
-
-
-    <%= copyrigth_generator %>
+    
   </body>
 </html>
