Implemented partials for blog, font awesome and pagination

--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -1,4 +1,5 @@
 @import "bootstrap";
+@import "font-awesome";
 
 /*
  * Globals
@@ -169,4 +170,8 @@ h6, .h6 {
 
 .izq {
   text-align: right;
+}
+
+.social-links li{
+  font-size: 2.5em;
 }
