--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -15,5 +15,8 @@
   <% end %>
 
   <p><%= blog.body %></p>
+  <p>
+    <a href="#">Subir <a href="#"><%= fa_icon 'arrow-up' %></a>
+  </p>
 
 </div>            
