--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,7 +1,9 @@
 <div class="col-sm-8 blog-main">
-    <%= render @blogs %>
-    <nav class="blog-pagination">
-      <a class="btn btn-outline-primary">Older</a>
-      <a class="btn btn-outline-secondary disabled"></a>
-    </nav>  
+
+  <%= paginate @blogs, theme: 'twitter-bootstrap-4' %>
+
+  <%= render @blogs %>
+
+  <%= paginate @blogs, theme: 'twitter-bootstrap-4' %>
+
 </div>
