--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -10,48 +10,27 @@
 
     <%= stylesheet_link_tag    'blogs', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-
   </head>
 
   <body>
 
     <%= render 'shared/blog_nav' %>
 
-    <!-- Inicio de la cabecera del blog --> 
-    <div class="blog-header">
-      <div class="container">
-        <h1 class="blog-title">Mi Blog</h1>
-        <p class="lead blog-description">An example blog template built with Bootstrap.</p>
-        <%= link_to 'Escribir nuevo artículo del blog', new_blog_path if logged_in?(:site_admin)%>
-      </div>
-    </div>
-    <!-- fin de la cabecera del blog --> 
-
-    <!-- Inicio del contenedor -->
+    <%= render 'shared/blog_masthead' %>
 
     <div class="container"> 
+
       <div class="row">
+  
+        <%= yield %>
 
+        <%= render 'shared/blog_sidebar' %>
 
-    <!-- fin del contenedor -->
-
+      </div>
     
-    <%= yield %>
-
-    <%= render 'shared/blog_sidebar' %>
-
+      <%= render 'shared/blog_footer' %>
+      
+      <%= source_helper("blog") %>
     </div>
-    <!-- Inicio pie de página -->
-    <footer class="blog-footer">
-      <p>Blog template built for <a href="https://getbootstrap.com">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-      <p>
-        <a href="#">Back to top</a>
-      </p>
-      <%= copyrigth_generator %>
-    </footer>
-    <!-- Fin pie de página -->
-    </div>
-
-    
   </body>
 </html>
