--- a/app/views/portfolios/_portfolio_item.html.erb
+++ b/app/views/portfolios/_portfolio_item.html.erb
@@ -1,13 +1,8 @@
-<h2><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item) %></h2>  
+<div class="card">
+  <%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %>
+  <p class="card-text">
+    <span><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item) %></span>
+    <em><%= portfolio_item.subtitle %></em>
+  </p>
+</div>
 
-<em><%= portfolio_item.subtitle %></em>
-
-<p><%= portfolio_item.body %></p>
-
-<%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %>
-
-<p><%= link_to "Editar Portfolio", edit_portfolio_path(portfolio_item)  if logged_in?(:site_admin) %></p>
-
-<p><%= link_to 'Eliminar', portfolio_path(portfolio_item), method: :delete, data: { confirm: '¿Seguro que quieres eliminar el artículo del portfolio?' } if logged_in?(:site_admin) %></p>
-
-<hr>
