Implemented partials for navigation, footer, and masthead for the portfolio layout

--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -16,7 +16,7 @@
 
   <p><%= blog.body %></p>
   <p>
-    <a href="#">Subir <a href="#"><%= fa_icon 'arrow-up' %></a>
+    <a href="#">Subir</a>
   </p>
 
 </div>            
