--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -1,19 +1,25 @@
-<h1><%= @portfolio_items.title %></h1>
+<div class="container">
+  <div class="row">
+    
+    <div class="col-md-7">
+      <%= image_tag @portfolio_items.main_image unless @portfolio_items.main_image.nil? %>
+      <hr>
+      <h3>Tecnologías usadas:</h3>
+      <% @portfolio_items.technologies.each do |t| %>
+        <p><%= t.name %></p>
+      <% end %>
+    </div>
 
-<%= image_tag @portfolio_items.main_image unless @portfolio_items.main_image.nil? %>
+    <div class="col-md-5">
+      <h2><%= @portfolio_items.title %></h2>
+      <hr>
+      <em><%= @portfolio_items.subtitle %></em>
+      <p><%= @portfolio_items.body %></p>
+      <br>
+      <%= link_to "Ver todos los artículos del portflio", portfolios_path %>
+    </div>
 
-<br>
+  </div>
+</div>
 
-<em><%= @portfolio_items.subtitle %></em>
-
-<p><%= @portfolio_items.body %></p>
-
-<!--
-
--->
-
-<h2>Tecnologías usadas:</h2>
-
-<% @portfolio_items.technologies.each do |t| %>
-  <p><%= t.name %></p>
-<% end %>
+      
