Updated form styles for portfolios

--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -59,6 +59,13 @@ footer p {
   margin-bottom: .25rem;
 }
 
+/* Custom styles */
+
 .centro {
   text-align: center;
+}
+
+.portfolio-form {
+  padding: 20px 200px;
+
 }
