--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -1,3 +1,7 @@
-<h1>Crear un nuevo objeto del Portfolio</h1>
+<div class="container portfolio-form">
 
-<%= render 'form', portfolio_item: @portfolio_items %>
+  <h1>Crear un nuevo objeto del Portfolio</h1>
+
+  <%= render 'form', portfolio_item: @portfolio_items %>
+
+</div>
