--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -1,37 +1,31 @@
 <%= form_for(@portfolio_items) do |form| %>
- <ul>
-  <li>
-  <div class="field">
+  <div class="form-group">
     <%= form.label :título %>
-    <%= form.text_field :title %>
+    <%= form.text_field :title, class: 'form-control' %>
   </div>
-  <br>
-  </li>
-  <li>
-  <div class="field">
-    <%= form.label :subtítulo %>
-    <%= form.text_field :subtitle %>
-  </div>
-  <br>
-  </li>
-  <li>
-  <div class="field">
-    <%= form.label :artículo %>
-    <%= form.text_area :body %>
-  </div>
-  <br>
-  </li>
- 
-    <%= form.fields_for :technologies do |technology_form| %>
-      <li>
-        <%= technology_form.label :name %>
-        <%= technology_form.text_field :name %>
-      </li>
-      <br>
-    <% end %>
-  </ul>
 
-  <div class="actions">
-    <%= form.submit "Publicar Portfolio"%>
+  <div class="form-group">
+    <%= form.label :subtítulo %>
+    <%= form.text_field :subtitle, class: 'form-control' %>
+  </div>
+
+  <div class="form-group">
+    <%= form.label :artículo %>
+    <%= form.text_area :body, class: 'form-control', rows: 15 %>
+  </div>
+  <hr>
+
+  <h2>Tecnologías</h2>
+  <div>
+    <%= form.fields_for :technologies do |technology_form| %>
+      <div class="form-group">
+        <%= technology_form.label :name %>
+        <%= technology_form.text_field :name, class: 'form-control' %>
+      </div>  
+    <% end %>
+  </div>
+
+  <div class="form-group">
+    <%= form.submit "Publicar Portfolio", class: "btn btn-primary btn-block" %>
   </div>
 <% end %>
