--- a/app/views/portfolios/edit.html.erb
+++ b/app/views/portfolios/edit.html.erb
@@ -1,3 +1,8 @@
-<h1>Editar este objeto del Portfolio</h1>
+<div class="container portfolio-form">
 
-<%= render 'form', portfolio_item: @portfolio_items %>
+  <h1>Editar este objeto del Portfolio</h1>
+
+  <%= render 'form', portfolio_item: @portfolio_items %>
+
+
+</div>
