--- a/app/views/shared/_portfolio_footer.html.erb
+++ b/app/views/shared/_portfolio_footer.html.erb
@@ -1,8 +1,20 @@
 <footer class="text-muted">
   <div class="container">
-    <p class="centro">
-      <a href="#">Subir</a>
-    </p>
+    
+    <div class="row">
+      <div class="col-md-6">
+        <p class="centro">
+          <%= link_to "Ver todos los artículos del portflio", portfolios_path %>
+        </p>
+      </div>
+
+      <div class="col-md-6">
+        <p class="centro">
+          <a href="#">Subir</a>
+        </p>
+      </div>
+    </div>
+
     <p class="centro">
       <%= copyrigth_generator %>
     </p>
