--- a/app/views/shared/_application_nav.html.erb
+++ b/app/views/shared/_application_nav.html.erb
@@ -1,14 +1,10 @@
 <div class="masthead clearfix">
   <div class="inner">
-<h4 class="masthead-brand">www.jcctek.com </h4>
+<h3 class="masthead-brand"><a href="<%= root_path %>">jcctek.com</a></h3>
   <!-- <h3><%= link_to "www.jcctek.com", "http://www.jcctek.com", class: 'masthead-brand' %></h3> -->
-    <nav class="nav nav-masthead">
+    <nav class="nav nav-masthead app-nav">
       <p class="nav-link">|&nbsp;</p>
-      <%= link_to "Inicio", root_path, class: 'nav-link' %>
-      <%= link_to "Sobre mi", about_path, class: 'nav-link' %>
-      <%= link_to "Contacto", contact_path, class: 'nav-link' %>
-      <%= link_to "Blog", blogs_path, class: 'nav-link' %>
-      <%= link_to "Portfolio", portfolios_path, class: 'nav-link' %>
+      <%= nav_helper 'nav-link', 'span' %>
       <p class="nav-link">&nbsp;|&nbsp;</p>
       <%= login_helper 'nav-link' %>
     </nav>
