--- a/app/views/shared/_blog_nav.html.erb
+++ b/app/views/shared/_blog_nav.html.erb
@@ -1,11 +1,7 @@
 <div class="blog-masthead">
   <div class="container">
     <nav class="nav blog-nav">
-      <%= link_to "Inicio", root_path, class: 'nav-link' %>
-      <%= link_to "Sobre mi", about_path, class: 'nav-link' %>
-      <%= link_to "Contacto", contact_path, class: 'nav-link' %>
-      <%= link_to "Blog", blogs_path, class: 'nav-link' %> 
-      <%= link_to "Portfolio", portfolios_path, class: 'nav-link' %>
+      <%= nav_helper 'nav-link', 'span' %>
       <p class = "nav-link">&nbsp;|&nbsp;</p>
       <%= login_helper 'nav-link' %>
     </nav>
