--- a/app/views/shared/_portfolio_nav.html.erb
+++ b/app/views/shared/_portfolio_nav.html.erb
@@ -10,11 +10,7 @@
       <div class="col-sm-4 py-4">
         <h4 class="text-white">Navega</h4>
         <ul class="list-unstyled">
-          <li><%= link_to "Inicio", root_path, class: 'text-white' %></li>
-          <li><%= link_to "Sobre mi", about_path, class: 'text-white' %></li>
-          <li><%= link_to "Contacto", contact_path, class: 'text-white' %></li>
-          <li><%= link_to "Blog", blogs_path, class: 'text-white' %></li>
-          <li><%= link_to "Portfolio", portfolios_path, class: 'text-white' %></li> 
+          <%= nav_helper 'text-white', 'li' %> 
           <li><%= login_helper 'text-white' %></li>
         </ul>
       </div>
@@ -25,7 +21,7 @@
 
 <div class="navbar navbar-inverse bg-inverse">
   <div class="container d-flex justify-content-between">
-    <a href="#" class="navbar-brand">jcctek.com</a>
+    <a href="<%= root_path %>" class="navbar-brand">jcctek.com</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
