Integrated image background and color fonts changed for app layout

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -9,9 +9,9 @@
   </div>  
   
   <div class="col-md-7">
-    <p>Aunque sin abandonar nunca el tema de la programación ni el mundo de la informática, los caminos laborales me ha llevado por otros caminos distintos alejádome de este mundo a nivel laboral.</p>
+    <p class="app-text">Aunque sin abandonar nunca el tema de la programación ni el mundo de la informática, los caminos laborales me ha llevado por otros caminos distintos alejádome de este mundo a nivel laboral.</p>
 
-    <p>Sin embargo durante lós últimos meses he decidido entrar en el mundo laboral dél desarrollo de aplicaciones web y para esto y de una forma autodidacta he realizado varios cursos de desarrollo web a través de distintas plataformas de aprendizaje online...</p>
+    <p class="app-text">Sin embargo durante lós últimos meses he decidido entrar en el mundo laboral dél desarrollo de aplicaciones web y para esto y de una forma autodidacta he realizado varios cursos de desarrollo web a través de distintas plataformas de aprendizaje online...</p>
   </div>
 
 </div>
