--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -4,7 +4,7 @@
 
 <div class="row">
   
-  <div class="col-md-4">
+  <div class="col-md-4 app-text">
   
     <h3>Dirección</h3>
     <p>Carretera de Pozuelo 5,</p>
