--- a/app/views/shared/_application_footer.html.erb
+++ b/app/views/shared/_application_footer.html.erb
@@ -1,5 +1,5 @@
 <div class="mastfoot">
   <div class="inner">
-    <p><%= copyrigth_generator %></p>
+    <p class="app-text"><%= copyrigth_generator %></p>
   </div>
 </div>
