--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container portfolio-form">
 
-  <h1>Crear un nuevo objeto del Portfolio</h1>
+  <h1>Nuevo objeto del Portfolio</h1>
 
   <%= render 'form', portfolio_item: @portfolio_items %>
 
