--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -14,10 +14,14 @@
       </div>
       
       <div class="form-group">
-        <%= form.file_field :main_image %>
+        <label class="btn btn-primary">
+          Subir imagen principal <%= form.file_field :main_image, style: 'display:none;' %>
+        </label>
       </div>
       <div class="form-group">
-        <%= form.file_field :thumb_image %>
+        <label class="btn btn-primary">
+          Subir imagen miniatura <%= form.file_field :thumb_image, style: 'display:none;' %>
+        </label>
       </div>
     </div>
 
