--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: blog, local: true) do |form| %>
+<%= form_for(blog) do |form| %>
   <% if blog.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(blog.errors.count, "error") %> prohibited this blog from being saved:</h2>
@@ -12,13 +12,11 @@
   <% end %>
 
   <div class="form-group">
-    <%= form.label :título %>
-    <%= form.text_field :title, id: :blog_title, class: 'form-control' %>
+     <%= form.text_field :title, id: :blog_title, class: 'form-control', placeholder: 'Título' %>
   </div>
 
   <div class="form-group">
-    <%= form.label :artículo %>
-    <%= form.text_area :body, id: :blog_body, class: 'form-control', rows: 20 %>
+    <%= form.text_area :body, id: :blog_body, class: 'form-control', rows: 20, placeholder: 'Contenido del blog' %>
   </div>
 
 
