--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -1,34 +1,34 @@
-<%= form_for(@portfolio_items) do |form| %>
- 
+<%= form_for(@portfolio_item) do |f| %>
+
   <div class="row">
 
     <div class="col-md-6">
       <div class="form-group">
-        <%= form.label :título %>
-        <%= form.text_field :title, class: 'form-control' %>
+        <%= f.label :título %>
+        <%= f.text_field :title, class: 'form-control' %>
       </div>
 
       <div class="form-group">
-        <%= form.label :subtítulo %>
-        <%= form.text_field :subtitle, class: 'form-control' %>
+        <%= f.label :subtítulo %>
+        <%= f.text_field :subtitle, class: 'form-control' %>
       </div>
       
       <div class="form-group">
         <label class="btn btn-primary">
-          Subir imagen principal <%= form.file_field :main_image, style: 'display:none;' %>
+          Subir imagen principal <%= f.file_field :main_image, style: 'display:none;' %>
         </label>
       </div>
       <div class="form-group">
         <label class="btn btn-primary">
-          Subir imagen miniatura <%= form.file_field :thumb_image, style: 'display:none;' %>
+          Subir imagen miniatura <%= f.file_field :thumb_image, style: 'display:none;' %>
         </label>
       </div>
     </div>
 
     <div class="col-md-6">
       <div class="form-group">
-        <%= form.label :artículo %>
-        <%= form.text_area :body, class: 'form-control', rows: 10 %>
+        <%= f.label :artículo %>
+        <%= f.text_area :body, class: 'form-control', rows: 10 %>
       </div>
     </div>
 
@@ -37,15 +37,15 @@
   <hr>
   <h2>Tecnologías usadas:</h2>
   <div>
-    <%= form.fields_for :technologies do |technology_form| %>
-      <div class="form-group">
-        <%= technology_form.label :name %>
-        <%= technology_form.text_field :name, class: 'form-control' %>
-      </div>  
+    <%= f.fields_for :technologies do |technology_form| %>
+      <%= render 'technology_fields', f: technology_form %>
     <% end %>
+    <div>
+      <%= link_to_add_association 'Añadir tecnología', f, :technologies %>
+    </div>
   </div>
 
   <div class="form-group">
-    <%= form.submit "Publicar Portfolio", class: "btn btn-primary btn-block" %>
+    <%= f.submit "Publicar Portfolio", class: "btn btn-primary btn-block" %>
   </div>
 <% end %>
