Refactored alerts into help method

--- a/app/views/shared/_application_nav.html.erb
+++ b/app/views/shared/_application_nav.html.erb
@@ -1,7 +1,7 @@
 <div class="masthead clearfix">
   <div class="inner">
-<h3 class="masthead-brand"><a href="<%= root_path %>">jcctek.com</a></h3>
-  <!-- <h3><%= link_to "www.jcctek.com", "http://www.jcctek.com", class: 'masthead-brand' %></h3> -->
+    <h3 class="masthead-brand"><a href="<%= root_path %>">jcctek.com</a></h3>
+  <!-- <h3><%#= link_to "www.jcctek.com", "http://www.jcctek.com", class: 'masthead-brand' %></h3> -->
     <nav class="nav nav-masthead app-nav">
       <p class="nav-link">|&nbsp;</p>
       <%= nav_helper 'nav-link', 'span' %>
