--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
 
           <%= render "shared/application_footer" %>
 
-          <%= render "shared/alerts" %>
+          <%= alerts %>
           
         </div>
       </div>
