Implemented jquery fuctions for action cable comment feature

--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -7,8 +7,10 @@
   <p><%= @blog.body %></p>
 
   <%= render 'comments/comment_form' %>
- 
-  <%= render @blog.comments%>
+  
+  <div class="comments" data-blog-id="<%= @blog.id %>">
+    <%= render @blog.comments%>
+  </div>
 
   <%= link_to 'Volver', blogs_path %>
 </div>
