Implemented icons for blog actions and implemented markdown to blog index

--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -2,9 +2,11 @@
     
   <h2><%= @blog.title %></h2>
 
-  <%= link_to 'Edit', edit_blog_path(@blog) if logged_in?(:site_admin)%>
+  <h3 class="pull-right"><%= link_to fa_icon('pencil-square-o'), edit_blog_path(@blog) if logged_in?(:site_admin)%>
+  <%= link_to fa_icon('trash'), @blog, method: :delete, data: { confirm: '¿Seguro que quieres eliminar el post?' } if logged_in?(:site_admin) %></h3>
+  <br>
   
-  <p><%= markdown @blog.body %></p>
+  <p><%= markdown @blog.body  %></p>
 
   <%= render 'comments/comment_form' %>
   
