Implemented little style changes for contact-me and about pages

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,19 +1,17 @@
-<h1>Sobre mi</h1>
 
-<hr>
-
+<h1 class="app-text">Sobre mi</h1>
+<br>
 <div class="row">
 
   <div class="col-md-5">
+
     <%= image_tag "perfil2.jpg", width:300, alt: "Imagen de perfil", title: "Foto: Ⓒ Valentina Massimino"%>
   </div>  
   
   <div class="col-md-7">
-    <p class="app-text">Aunque sin abandonar nunca el tema de la programación ni el mundo de la informática, los caminos laborales me ha llevado por otros caminos distintos alejádome de este mundo a nivel laboral.</p>
+    <p class="app-text text-left">Aunque sin abandonar nunca el tema de la programación ni el mundo de la informática, los caminos laborales me ha llevado por otros caminos distintos alejádome de este mundo a nivel laboral.</p>
 
-    <p class="app-text">Sin embargo durante lós últimos meses he decidido entrar en el mundo laboral dél desarrollo de aplicaciones web y para esto y de una forma autodidacta he realizado varios cursos de desarrollo web a través de distintas plataformas de aprendizaje online...</p>
+    <p class="app-text text-left">Sin embargo durante lós últimos meses he decidido entrar en el mundo laboral dél desarrollo de aplicaciones web y para esto y de una forma autodidacta he realizado varios cursos de desarrollo web a través de distintas plataformas de aprendizaje online...</p>
   </div>
 
 </div>
-
-
