--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -220,3 +220,8 @@ body {
 .text-left {
   text-align: left;
 }
+.btn-success{
+  color: black;
+  background-color: #A2FF14;
+  margin-right: 20px;
+}
