Integrated custom fonts

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -29,7 +29,7 @@
   <div class="col-md-8">
     <p class="app-text text-left">Aunque sin abandonar nunca el tema de la programación ni el mundo de la informática, los caminos laborales me ha llevado por otros caminos distintos alejádome de este mundo a nivel laboral.</p>
 
-    <p class="app-text text-left">Sin embargo durante lós últimos meses he decidido entrar en el mundo laboral dél desarrollo de aplicaciones web y para esto y de una forma autodidacta he realizado varios cursos de desarrollo web a través de distintas plataformas de aprendizaje online...</p>
+    <p class="app-text text-left">Sin embargo durante lós últimos meses he decidido entrar en el mundo laboral del desarrollo de aplicaciones web y para esto y de una forma autodidacta he realizado varios cursos de desarrollo web a través de distintas plataformas de aprendizaje online...</p>
 
     <br>
     
