--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <meta name="keywords" content="<%= @seo_keywords %>" >
 
     <%= favicon_link_tag 'favicons/favicon4.ico' %>
+    <link href="https://fonts.googleapis.com/css?family=Aldrich" rel="stylesheet">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
