Final changes to clear code and modified some content of pages

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -4,7 +4,7 @@
 <div class="row">
 
   <div class="col-md-4">
-    <%= image_tag "perfil2.jpg", width:300, alt: "Imagen de perfil", title: "Foto: Ⓒ Valentina Massimino"%>
+    <%= image_tag "astronaut.jpg", width:300, alt: "Imagen de perfil" %>
     
     <div class="skills">
       <% @skills.each do |skill| %>
@@ -27,9 +27,9 @@
   </div>  
   
   <div class="col-md-8">
-    <p class="app-text text-left">Aunque sin abandonar nunca el tema de la programación ni el mundo de la informática, los caminos laborales me ha llevado por otros caminos distintos alejádome de este mundo a nivel laboral.</p>
+    <p class="app-text text-left">En esta página aparecerá la parte relativa tanto a la experiencia laboral como a los diversos cursos que se hayan realizado. Con respecto a los trabajos realizados está la parte de 'portfolio' y aquí no aparecerían aunque también se podrían enlazar desde aquí.</p>
 
-    <p class="app-text text-left">Sin embargo durante lós últimos meses he decidido entrar en el mundo laboral del desarrollo de aplicaciones web y para esto y de una forma autodidacta he realizado varios cursos de desarrollo web a través de distintas plataformas de aprendizaje online...</p>
+    <p class="app-text text-left">El perfil que aparece no es real y solo está puesto con fines educativos.</p>
 
     <br>
     
