--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -1,15 +1,15 @@
 <div class="col-sm-3 offset-sm-1 blog-sidebar">
   <div class="sidebar-module sidebar-module-inset">
-    <h4>About</h4>
-    <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
+    <h4>Mi blog</h4>
+    <p>Este <em>blog</em> es un ejemplo de la programación web realizada con Ruby on Rails, utilizando también para el diseño CSS y Bootstrap 4.</p>
   </div>
 
   <div class="sidebar-module">
-    <h4>Elsewhere</h4>
+    <h4>También en:</h4>
     <ol class="list-unstyled social-links">
       <li><a href="https://github.com/ixtab" target="_blank"><%= fa_icon 'github' %></a></li>
       <li><a href="https://www.twitter.com" target="_blank"><%= fa_icon 'twitter' %></a></li>
-      <li><a href="https://www.facebook.com/josecarlosc" target="_blank"><%= fa_icon 'facebook-official' %></a></li>
+      <li><a href="https://www.facebook.com" target="_blank"><%= fa_icon 'facebook-official' %></a></li>
     </ol>
   </div>
 </div>
