--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -13,7 +13,7 @@
             </div>
 
             <div class="form-group">
-              <%= f.label :nombre %><br />
+              <%= f.label :name, 'Nombre' %><br />
               <%= f.text_field :name, class: 'form-control' %>
             </div>
 
