--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,7 +13,7 @@
         </div>
 
         <div class="form-group">
-          <%= f.label :nombre %><br />
+          <%= f.label :name, 'nombre' %><br />
           <%= f.text_field :name, class: "form-control" %>
         </div>
       </div>
