--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title><%= @page_title %></title>
     <%= csrf_meta_tags %>
-    <meta name="keywords" content="<%= @seo_keywords %>" >
-    <<link href="https://fonts.googleapis.com/css?family=Cantata+One" rel="stylesheet">
+    <meta name="keywords" content="<%= @seo_keywords %>">
+    <link href="https://fonts.googleapis.com/css?family=Cantata+One" rel="stylesheet">
     <%= favicon_link_tag 'favicons/favicon4.ico' %>
     <%= stylesheet_link_tag    'portfolios', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
