--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="inner cover">
   <h1 class="cover-heading app-text">¡ Hola !</h1>
-  <p class="lead app-text">En estas páginas encontrarás diversos proyectos en los que he trabajado en mi aprendizaje de desarrollo de aplicaciones web, desde páginas básicas en html hasta proyectos más grandes como este mismo que estás viendo realizado en Ruby on Rails.</p>
+  <p class="lead app-text">Estas página son parte de las prácticas realizadas sobre todo en Ruby on Rails aunque incluyen también otros tipos de lenguajes de programación como javascript, jquery e incluyen también diseño web en html5 y css.</p>
   <p class="lead">
    <%= link_to "Más sobre mi", about_me_path, class: "btn btn-lg btn-secondary" %>
   </p>
