--- a/app/views/pages/tech_news.html.erb
+++ b/app/views/pages/tech_news.html.erb
@@ -1,5 +1,5 @@
 <div class="inner cover">
-  <h1 class="cover-heading app-text">Noticias de Desarrollo Web</h1>
+  <h1 class="cover-heading app-text">Últimos twits sobre Desarrollo Web</h1>
   <div class="row">
     <% @tweets.each do |tweet| %>
       <div class="col-md-6">
