--- a/app/views/shared/_portfolio_nav.html.erb
+++ b/app/views/shared/_portfolio_nav.html.erb
@@ -3,8 +3,8 @@
     <div class="row">
 
       <div class="col-sm-8 py-4">
-        <h4 class="text-white">About</h4>
-        <p class="text-muted">Add some information about the album below, the author, or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. Then, link them off to some social networking sites or contact information.</p>
+        <h4 class="text-white">Portfolio</h4>
+        <p class="text-muted">Aquí apareceran distintos trabajos realizados informando de que proyecto se trata y si interesa de con que tecnologías se han llevado a cabo. Va acompañado de fotografías una pequeña para el indice del portfolio y otra más grande para el detalle de los artículos.</p>
       </div>
 
       <div class="col-sm-4 py-4">
