--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -4,7 +4,7 @@
 <div class="row">
 
   <div class="col-md-4">
-    <%= image_tag "astronaut.jpg", width:300, alt: "Imagen de perfil" %>
+    <%= image_tag "https://s3-eu-west-1.amazonaws.com/devcamp-portfolio-jcc/uploads/portfolio/main_image/astronaut.jpg", width:300, alt: "Imagen de perfil" %>
     
     <div class="skills">
       <% @skills.each do |skill| %>
