--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -7,7 +7,9 @@
     <title><%= @page_title %></title>
     <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
     <%= csrf_meta_tags %>
-    
+    <meta name="keywords" content="<%= @seo_keywords %>" >
+
+    <%= favicon_link_tag 'https://s3-eu-west-1.amazonaws.com/devcamp-portfolio-jcc/uploads/portfolio/main_image/favicon4.ico' %>
     <%= stylesheet_link_tag    'blogs', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
