--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -7,7 +7,7 @@
     <%= csrf_meta_tags %>
    
     <link href="https://fonts.googleapis.com/css?family=Cantata+One" rel="stylesheet">
-
+    <%= favicon_link_tag 'https://s3-eu-west-1.amazonaws.com/devcamp-portfolio-jcc/uploads/portfolio/main_image/favicon4.ico' %>
     <%= stylesheet_link_tag    'portfolios', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
